--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   toastification: ^2.3.0
   email_validator_flutter: ^1.0.0
   password_strength_checker: ^1.2.4
+  map_location_picker: ^1.3.2
+  location_picker_flutter_map: ^1.1.0
+  awesome_place_search: ^2.0.0
+  image_picker: ^1.1.2
+  file_picker: ^8.1.2
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +71,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/back.jpg
+    - assets/images/back2.png
+    - assets/images/no-profile-picture-15258 (1).png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
